--- a/bin/ht.in
+++ b/bin/ht.in
@@ -69,12 +69,14 @@ do_restart() {
 do_cmd() {
   cmd=$1; shift
   [ "$cmd" ] || { print_help; exit; }
-  if [ -x $HYPERTABLE_HOME/bin/$cmd ]; then
+  if [ -x $HYPERTABLE_HOME/bin/ht_$cmd ]; then
+    exec $HYPERTABLE_HOME/bin/ht_$cmd "$@"
+  elif [ -x $HYPERTABLE_HOME/bin/ht-$cmd.sh ]; then
+    exec $HYPERTABLE_HOME/bin/ht-$cmd.sh "$@"
+  elif [ -x $HYPERTABLE_HOME/bin/$cmd ]; then
     exec $HYPERTABLE_HOME/bin/$cmd "$@"
   elif [ -x $HYPERTABLE_HOME/bin/$cmd.sh ]; then
     exec $HYPERTABLE_HOME/bin/$cmd.sh "$@"
-  elif [ -x $HYPERTABLE_HOME/bin/ht_$cmd ]; then
-    exec $HYPERTABLE_HOME/bin/ht_$cmd "$@"
   fi
   exec $cmd "$@";
 }
